Fix fit to page scaling display for landscape

Found there is a bug in the scaling value displayed when "Fit to Page"
is checked for landscape oriented documents due to the difference in
orientation between printable area and the document. Correct for
orientation in the fit to page scaling computation so that the correct
value will be displayed in the UI.

BUG=695636

Review-Url: https://codereview.chromium.org/2708213003
Cr-Commit-Position: refs/heads/master@{#452685}

Former-commit-id: 83f9a7b7a698e9cb7b6e03c2ad567ab5d1435d93